--- a/styles.css
+++ b/styles.css
@@ -25,7 +25,7 @@ body, html {
 }
 
 .ripple {
-    position: absolute;
+    position: fixed;
     margin-top: 40px;
     margin-left: 40px;
     border-radius: 50%;
