--- a/styles.css
+++ b/styles.css
@@ -3,15 +3,29 @@
 
 body, html {
     cursor: none;
+    margin-top: 0;
     margin: 0;
     padding: 0;
     font-family: 'Jost', sans-serif;
-    background: rgb(19, 19, 19);
+    background-color: rgba(0, 0, 0, 0.4);
     color: white;
     font-size: 16px; /* Increased base font size */
+    overflow:auto;
+}
+
+#video-background {
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    min-width: 100%;
+    min-height: 100%;
+    z-index: -1;
 }
 
 .custom-cursor {
+    background-color: rgba(0, 0, 0, 0.21);
     margin-top: 8px;
     margin-left: 8px;
     width: 18px;
@@ -56,6 +70,7 @@ body, html {
 }
 
 .Back{
+    cursor: none;
     position: fixed;
     bottom: 30px;
     z-index: 99;
@@ -70,6 +85,8 @@ body, html {
 }
 
 .Back h1{
+    cursor: none;
+    color: rgb(179, 255, 0);
     text-align: center;
     font-size: 50px;
     margin-top: -5px;
@@ -78,12 +95,18 @@ body, html {
 
 @media (min-width: 768px) {
     .Back:hover{
+        cursor: none;
         color: rgb(19, 19, 19);
         background-color: rgb(179, 255, 0);
+    }
+    
+    .Back h1:hover{
+        color: rgb(0, 0, 0);
     }
 }
 
 .main {
+    cursor: none;
     width: calc(100% - 50px); /* Full width minus margin */
     height: 50px;
     background-color: rgba(255, 255, 255, 0.118);
@@ -189,10 +212,12 @@ body, html {
 }
 
 .mob-nav {
+    cursor: none;
     display: none;
 }
 
 .container {
+    cursor: none;
     width: 100%;
     margin: 0 auto;
     display: flex;
@@ -205,17 +230,20 @@ body, html {
 }
 
 .hide-content {
+    cursor: none;
     transform: translateY(25px); /* Adjust the amount of movement down */
     opacity: 0; /* Fade out content */
 }
 
 
 .container h2{
+    cursor: none;
     color: rgb(179, 255, 0);
     font-family: "Kaushan Script", cursive;
 }
 
 .nav-a::after {
+    cursor: none;
     content: '';
     width: 0;
     height: 2px;
@@ -228,6 +256,7 @@ body, html {
 }
 
 .nav-a:hover::after {
+    cursor: none;
     width: 100%;
     left: 0;
     color: rgb(179, 255, 0);
@@ -235,6 +264,7 @@ body, html {
 }
 
 .section {
+    cursor: none;
     padding: 60px 20px;
     background:  transparent;
     margin: 20px 0;
@@ -251,6 +281,7 @@ h2 {
 }
 
 .section p, .section ul, .section form {
+    cursor: none;
     max-width: 100%;
     margin: 0 auto;
     text-align: left;
@@ -354,10 +385,27 @@ h2 {
     gap: 10px;
 }
 
-#contact input,
-#contact textarea {
-    background: rgb(19, 19, 19);
+#contact input{
+    cursor: none;
+    background-color: rgba(0, 0, 0, 0);
     color: #fff;
+    border: 1px solid #fff;
+    border-radius: 10px;
+    padding: 10px;
+    margin: 10px;
+    font-size: 16px;
+    font-family: 'Playfair Display', serif;
+    width: 250%;
+    max-width: 250%;
+    box-sizing: border-box;
+    transition: .5s ease-in-out;
+}
+
+#contact textarea {
+    cursor: none;
+    background-color: rgba(0, 0, 0, 0);
+    color: #fff;
+    border-radius: 10px;
     border: 1px solid #fff;
     padding: 10px;
     margin: 10px;
@@ -366,12 +414,25 @@ h2 {
     width: 250%;
     max-width: 250%;
     box-sizing: border-box;
+    transition: .3s ease-in-out;
 }
 
 #contact textarea {
     height: 100px;
     resize: vertical;
     overflow: auto;
+}
+
+@media (min-width: 768px) {
+    #contact input:hover{
+        border: rgb(179, 255, 0) solid 1px;
+        border-radius: 0px;
+    }
+    #contact textarea:hover{
+        border: rgb(179, 255, 0) solid 1px;
+        border-radius: 0px;
+    }
+    
 }
 
 @media (max-width: 768px) {
