--- a/styles.css
+++ b/styles.css
@@ -139,7 +139,7 @@ body, html {
     justify-content: space-between;
     width: 20px;
     height: 17px; /* Adjusted height */
-    cursor: pointer;
+    cursor: none;
 }
 .hamburger div {
     width: 100%;
