--- a/styles.css
+++ b/styles.css
@@ -146,6 +146,7 @@ body, html {
     height: 3px;
     background-color: white;
     transition: transform 0.3s;
+    cursor: none;
 }
 .cross .bar1 {
     transform: rotate(45deg) translate(5px, 5px);
