--- a/styles.css
+++ b/styles.css
@@ -24,6 +24,10 @@ body, html {
     z-index: -1;
 }
 
+.hidden {
+    display: none;
+}
+
 .custom-cursor {
     background-color: rgba(0, 0, 0, 0.21);
     margin-top: 8px;
@@ -37,6 +41,7 @@ body, html {
     z-index: 1000; /* Make sure it's on top of other elements */
     display: none; /* Initially hidden */
     transform: translate(-50%, -50%); /* Center the custom cursor on the mouse position */
+    transition: transform 0.1s ease;
 }
 
 @media (min-width: 768px) {
@@ -139,14 +144,13 @@ body, html {
     justify-content: space-between;
     width: 20px;
     height: 17px; /* Adjusted height */
-    cursor: none;
+    cursor: pointer;
 }
 .hamburger div {
     width: 100%;
     height: 3px;
     background-color: white;
     transition: transform 0.3s;
-    cursor: none;
 }
 .cross .bar1 {
     transform: rotate(45deg) translate(5px, 5px);
